--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 		"eslint-plugin-security": "1.4.0",
 		"lint-staged": "10.2.9",
 		"mocha": "7.2.0",
-		"mockgoose": "8.0.4",
+		"mockgoose": "^8.0.4",
 		"nodemon": "2.0.4",
 		"nyc": "15.1.0",
 		"prettier": "2.0.5",
