--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"express": "4.17.1",
 		"jsonwebtoken": "8.5.1",
 		"mongoose": "5.9.18",
+		"mockgoose": "^8.0.4",
 		"node-input-validator": "4.2.0",
 		"winston": "3.2.1"
 	},
